# forticheck

./: .gitignore  Dockerfile  LICENSE  Makefile  PUBLISH.md  README.md  README.tr.md  pyproject.toml  requirements.txt  sample_fortigate_all_findings.conf  zones_trust.yaml
docs/architecture/: 01_vision_capabilities.md  02_data_model_engines.md  03_graph_risk_model.md  04_report_architecture.md  05_roadmap_stack.md  SECURITY_INTENT_ARCHITECTURE.md
forticheck/: __init__.py  __main__.py  cli.py  core.py  diff.py
forticheck/analysis/: __init__.py  attack_path.py  behavior_chain.py  blast_radius.py  cis.py  custom_rules.py  engines.py  implicit_trust.py  intent_analysis.py  lateral_movement.py  logic.py  policy_complexity.py  policy_ordering.py  segmentation_drift.py  shadow.py  stale_objects.py  transitive_access.py  trust_boundary_mismatch.py  user_vpn.py
forticheck/graph/: __init__.py  builder.py
forticheck/models/: __init__.py  canonical.py  findings.py
forticheck/normalizer/: builder.py  policy.py  resolver.py
forticheck/parsers/: fortigate.py
forticheck/reporting/: engine.py
forticheck/reporting/templates/: report.html
forticheck/risk/: scorer.py
tests/: __init__.py  test_analysis_engines.py  test_cis.py  test_logic.py  test_normalizer_builder.py  test_parser.py  test_reporting.py  test_risk.py  test_shadow.py  test_stale_objects.py
tests/samples/: sample_fortigate.conf
