[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forticheck"
version = "0.1.0"
description = "FortiGate firewall configuration security analysis platform"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    {name = "Cuma KURT", email = "cumakurt@gmail.com"}
]
keywords = ["fortigate", "firewall", "security", "audit", "cis", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "netaddr>=0.9",
    "networkx>=3.2",
    "jinja2>=3.1",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/cumakurt/forticheck"
Repository = "https://github.com/cumakurt/forticheck"
Documentation = "https://github.com/cumakurt/forticheck#readme"
"Bug Tracker" = "https://github.com/cumakurt/forticheck/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
forticheck = "forticheck.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forticheck*"]

[tool.setuptools.package-data]
forticheck = ["reporting/templates/*.html"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
